Fix overflow behavior.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     --foreground: #e8e8e8;
     --background: #212529;
     --dim: #424246;
-    --dim: #424246;
+    --half-dim: #424246;
     --accent: #f8b3da;
   }
 }
@@ -44,8 +44,7 @@ html {
   height: 100%;
   display: flex;
   justify-content: center;
-  /* FIXME */
-  align-items: center;
+  align-items: safe center;
 }
 
 body {
